added random posts

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URI=mongodb://pawan67:JbBywfdftkT73fBU@ac-lridoji-shard-00-00.huxtpqm.mong
 PORT=5050
 JWT_SECRET=thisisawesome
 NODE_ENV=production
+
+NODE_EMAIL=weshare.p67@gmail.com
+NODE_PASSWORD=JbBywfdftkT73fBU
